--- a/resources/views/components/image.antlers.html
+++ b/resources/views/components/image.antlers.html
@@ -21,7 +21,7 @@
 
     {{ foreach:formats as="format|mime_type" }}
     <source srcset="{{ srcset scope='size' }}
-                {{ glide:image :format='format' :width='size:width' :height='size:height' fit='crop_focal' quality='{ size:quality }' }} {{ size:width }}w{{ !last ?= ',' }}
+                {{ glide:image :format='format' :width='size:width' :height='size:height' fit='{{ fit ?? 'crop_focal' }}' quality='{ size:quality }' }} {{ size:width }}w{{ !last ?= ',' }}
             {{ /srcset }}"
             sizes="{{ sizes ?? '(min-width: 768px) 50vw, 100vw' }}"
             type="{{ mime_type }}">
@@ -29,7 +29,7 @@
 
     <img alt="{{ alt | entities }}"
          height="{{ 1024 * original_ratio }}"
-         src="{{ glide:image width='1024' height='{ 1024 * original_ratio }' fit='crop_focal' }}"
+         src="{{ glide:image width='1024' height='{ 1024 * original_ratio }' fit='{{ fit ?? 'crop_focal' }}' }}"
          width="1024"
          {{ if cover }}
          class="object-cover w-full h-full {{ class }}"
